agrego los script de la base de datos

--- a/Tools.Data/Tools.Data.csproj
+++ b/Tools.Data/Tools.Data.csproj
@@ -19,4 +19,9 @@
     <ProjectReference Include="..\Tools.Shared\Tools.Shared.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Scripts\Data\Stored Procedures\" />
+    <Folder Include="Scripts\Data\Productos\" />
+  </ItemGroup>
+
 </Project>
